--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,50 @@
 absl-py==0.7.1
 astor==0.8.0
+cachetools==4.1.0
+certifi==2020.4.5.1
+chardet==3.0.4
 cycler==0.10.0
 gast==0.2.2
 gitdb==4.0.2
 GitPython==3.1.0
+google-auth==1.14.2
+google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-grpcio==1.20.1
+grpcio==1.28.1
 h5py==2.9.0
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
+idna==2.9
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 Markdown==3.1.1
 matplotlib==3.1.1
 mock==3.0.5
 mpi4py==3.0.3
 numpy==1.16.3
+oauthlib==3.1.0
 opt-einsum==3.2.0
 Pillow==7.1.2
 protobuf==3.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyparsing==2.4.6
 python-dateutil==2.8.1
 PyYAML==5.1
-scipy==1.3.0
+requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.0
+scipy==1.4.1
 six==1.12.0
 smmap==3.0.1
 sobol==0.9
 sobol-seq==0.1.2
-tensorboard==1.13.1
+tensorboard==2.1.0
+tensorboard-plugin-wit==1.6.0.post3
 tensorflow==2.1.0
-tensorflow-estimator==1.13.0
+tensorflow-estimator==2.1.0
 termcolor==1.1.0
 tikzplotlib==0.9.1
+urllib3==1.25.9
 Werkzeug==0.15.4
 wrapt==1.12.1
